WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147116
Fix the !ENABLE(VIDEO) build after
r186396
https://bugs.webkit.org/show_bug.cgi?id=147116
Summary
Fix the !ENABLE(VIDEO) build after r186396
Csaba Osztrogonác
Reported
2015-07-20 11:47:08 PDT
http://trac.webkit.org/changeset/186396
broke the !ENABLE(VIDEO) build: Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebProcess.cpp.o:WebProcess.cpp:function WebKit::WebProcess::didClose(IPC::Connection&): error: undefined reference to 'WebCore::PlatformMediaSessionManager::sharedManager()' Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebProcess.cpp.o:WebProcess.cpp:function WebKit::WebProcess::didClose(IPC::Connection&): error: undefined reference to 'WebCore::PlatformMediaSessionManager::stopAllMediaPlaybackForProcess()'
Attachments
Patch
(1.43 KB, patch)
2015-07-20 11:48 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-07-20 11:48:12 PDT
Created
attachment 257112
[details]
Patch
Brent Fulgham
Comment 2
2015-07-20 12:04:46 PDT
Comment on
attachment 257112
[details]
Patch r=me.
WebKit Commit Bot
Comment 3
2015-07-20 12:52:13 PDT
Comment on
attachment 257112
[details]
Patch Clearing flags on attachment: 257112 Committed
r187029
: <
http://trac.webkit.org/changeset/187029
>
WebKit Commit Bot
Comment 4
2015-07-20 12:52:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug