Fix the !ENABLE(VIDEO) build after r186396 https://bugs.webkit.org/show_bug.cgi?id=147116

Reviewed by Brent Fulgham.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::didClose):


Canonical link: https://commits.webkit.org/165157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187029 268f45cc-cd09-0410-ab3c-d52691b4dbfc