Source/WebKit2/WebProcess/WebProcess.cpp
@@ -657,10 +657,12 @@ void WebProcess::didClose(IPC::Connection&)
     GCController::singleton().garbageCollectSoon();
     FontCache::singleton().invalidate();
     MemoryCache::singleton().setDisabled(true);
-#endif    
+#endif
 
+#if ENABLE(VIDEO)
     // FIXME(146657): This explicit media stop command should not be necessary
     PlatformMediaSessionManager::sharedManager().stopAllMediaPlaybackForProcess();
+#endif
 
     // The UI process closed this connection, shut down.
     stopRunLoop();
